load("@better_rules_javascript//commonjs:rules.bzl", "cjs_root")
load("@better_rules_javascript//javascript:rules.bzl", "js_library")
load("@better_rules_javascript//nodejs:rules.bzl", "nodejs_binary")
load("@better_rules_javascript//typescript:rules.bzl", "ts_library")
load("@rules_terraform//cdktf:rules.bzl", "cdktf_project", "tf_import_cdktf")
load("//aws/artifact:rules.bzl", "aws_artifact")

package(default_visibility = ["//visibility:public"])

cdktf_project(
    name = "cdktf",
    bin = ":bin",
    config = "cdktf.json",
)

tf_import_cdktf(
    name = "fare_publish_base",
    data_dir = "/data/redotech/publish/fare-publish-base",
    providers = [
        "@terraform_aws//:provider",
    ],
    stack = "FarePublishBase",
    synth = ":cdktf.synth",
)

aws_artifact(
    name = "fare_artifacts",
    srcs = ["//fare/publish:data"],
    region = "us-east-1",
    s3_bucket = "redotech-fare-artifact",
)

tf_import_cdktf(
    name = "fare_publish",
    data = [
        ":fare_artifacts",
        "//bazel/rules:build_embed_label",
    ],
    data_dir = "/data/redotech/publish/fare-publish",
    providers = [
        "@terraform_aws//:provider",
    ],
    stack = "FarePublish",
    synth = ":cdktf.synth",
)

nodejs_binary(
    name = "bin",
    dep = ":lib",
    main = "lib/main.js",
)

ts_library(
    name = "lib",
    srcs = glob(["src/**/*.ts"]),
    compiler = "//tools/typescript:tsc",
    config = "tsconfig.json",
    config_dep = ":tsconfig",
    declaration_prefix = "lib",
    js_prefix = "lib",
    root = ":root",
    strip_prefix = "src",
    deps = [
        "//fare/publish:lib",
        "//terraform/util:lib",
        "@npm//@cdktf/provider-aws:lib",
        "@npm//@types/node:lib",
        "@npm//cdktf:lib",
        "@npm//constructs:lib",
    ],
)

cjs_root(
    name = "root",
    package_name = "@redotech/publish",
    descriptors = ["package.json"],
)

js_library(
    name = "tsconfig",
    srcs = ["tsconfig.json"],
    root = ":root",
    deps = ["//tools/typescript:lib"],
)
