load("@rules_pkg//pkg:deb.bzl", "pkg_deb")
load("@rules_pkg//pkg:mappings.bzl", "pkg_attributes", "pkg_files")
load("@rules_pkg//pkg:tar.bzl", "pkg_tar")

package(default_visibility = ["//visibility:public"])

pkg_deb(
    name = "deb_",
    data = ":tar",
    depends = [
        "curl",
        "jq",
    ],
    description = "GitHub Actions Runner EC2",
    maintainer = "Redo Tech",
    package = "actions-runner-ec2",
    postinst = "deb/postinst",
    version = "1.0.0",
)

pkg_files(
    name = "files",
    srcs = [
        "actions-runner-ec2.service",
        "actions-runner-setup-10-ec2.conf",
    ],
    renames = {
        "actions-runner-ec2.service": "/usr/lib/systemd/system/actions-runner-ec2.service",
        "actions-runner-setup-10-ec2.conf": "/etc/systemd/system/actions-runner-setup.service.d/10-ec2.conf",
    },
)

pkg_files(
    name = "scripts",
    srcs = [
        "conf",
    ],
    attributes = pkg_attributes(mode = "0755"),
    renames = {
        "conf": "/usr/sbin/actions-runner-ec2-conf",
    },
)

pkg_tar(
    name = "tar",
    srcs = [
        ":files",
        ":scripts",
    ],
)
