load("@rules_pkg//pkg:deb.bzl", "pkg_deb")
load("@rules_pkg//pkg:mappings.bzl", "pkg_attributes", "pkg_files")
load("@rules_pkg//pkg:tar.bzl", "pkg_tar")

package(default_visibility = ["//visibility:public"])

pkg_deb(
    name = "deb",
    data = ":tar",
    depends = [
        "curl",
        "jq",
        "sigv4",
    ],
    description = "GitHub Actions Runner EC2",
    maintainer = "Redo Tech",
    package = "actions-runner-ec2",
    postinst = "deb/postinst",
    version = "1.0.0",
)

pkg_files(
    name = "files",
    srcs = [
        "actions-runner-10-ec2.conf",
        "actions-runner-config-10-ec2.conf",
        "actions-runner-ec2.service",
    ],
    renames = {
        "actions-runner-10-ec2.conf": "/etc/systemd/system/actions-runner.service.d/10-ec2.conf",
        "actions-runner-config-10-ec2.conf": "/etc/systemd/system/actions-runner-config.service.d/10-ec2.conf",
        "actions-runner-ec2.service": "/usr/lib/systemd/system/actions-runner-ec2.service",
    },
)

pkg_files(
    name = "execs",
    srcs = [
        "bin",
    ],
    attributes = pkg_attributes(mode = "0755"),
    renames = {
        "bin": "/usr/lib/actions-runner-ec2/bin",
    },
)

pkg_tar(
    name = "tar",
    srcs = [
        ":execs",
        ":files",
    ],
)
